Correct GMT offsets for New Zealand and the Kingdom of Tonga, bug 591845. r=brendan, CLOSED TREE